@@ -1,4 +1,4 @@
-$Id: README.dev,v 1.19 2011/10/16 23:14:08 karl Exp $
+$Id: README.dev,v 1.20 2011/10/25 23:22:06 karl Exp $
 This README.dev file describes the development environment.
 
   Copyright 2002, 2003, 2005, 2006, 2007, 2008, 2010, 2011
@@ -21,7 +21,7 @@ All of these programs are available from ftp://ftp.gnu.org/gnu.
 After getting the CVS sources, and installing the tools above, you can run
  ./autogen.sh
 and then
- ./configure CFLAGS='-g -Wdeclaration-after-statement'
+ ./configure --enable-maintainer-mode CFLAGS='-g -Wdeclaration-after-statement'
 and then
  make
 
