@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: autogen.sh,v 1.7 2011/10/17 17:49:07 karl Exp $
+# $Id: autogen.sh,v 1.8 2011/10/25 23:22:07 karl Exp $
 # Created 2003-08-29, Karl Berry.  Public domain.
 
 if test "x$1" = x-n; then
@@ -28,9 +28,9 @@ $chicken eval $cmd || exit 1
 : ${AUTOMAKE=automake}
 : ${AUTOCONF=autoconf}
 cmd="$ACLOCAL -I gnulib/m4 && $AUTOCONF && $AUTOHEADER && $AUTOMAKE"
-echo "  $cmd"
-$chicken eval $cmd || exit 1
+echo "  $cmd $*"
+$chicken eval $cmd "$@" || exit 1
 
 echo
 echo "Now run configure with your desired options, for instance:"
-echo "  ./configure CFLAGS='-g'"
+echo "  ./configure --enable-maintainer-mode CFLAGS='-g'"
