@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.11 2011/10/17 17:49:07 karl Exp $
+# $Id: Makefile.am,v 1.12 2011/10/25 23:22:07 karl Exp $
 # Makefile.am for texinfo/tp.
 #
 # Copyright 2011 Free Software Foundation, Inc.
@@ -13,8 +13,11 @@
 
 # A long list of files that we generate.
 include $(srcdir)/Makefile.tres
+
+if MAINTAINER_MODE
 $(srcdir)/Makefile.tres: maintain/regenerate_file_lists.pl
 	cd $(srcdir)/ && $(PERL) ./maintain/regenerate_file_lists.pl
+endif
 
 bin_SCRIPTS = texi2any
 
